benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignum_ModExp_Mul_Zeroes_iter1_error.log
=== Verification Error - Iteration 1 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_Mul_Zeroes.rs
Time: 2025-09-15 19:26:19

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_Zeroes_impl.rs:27:13
   |
27 |     if n == 0 {
   |        -    ^ expected `nat`, found integer
   |        |
   |        expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_Zeroes_impl.rs:32:21
   |
32 |         while num > 0
   |               ---   ^ expected `nat`, found integer
   |               |
   |               expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_Zeroes_impl.rs:36:22
   |
36 |             if num % 2 == 0 {
   |                ---   ^ expected `nat`, found integer
   |                |
   |                expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_Zeroes_impl.rs:36:27
   |
36 |             if num % 2 == 0 {
   |                -------    ^ expected `nat`, found integer
   |                |
   |                expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_Zeroes_impl.rs:41:25
   |
41 |             num = num / 2;
   |                   ---   ^ expected `nat`, found integer
   |                   |
   |                   expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_Zeroes_impl.rs:59:23
   |
59 |           nat_to_binary(1 % {
   |  _________-------------_^
   | |         |
   | |         arguments to this function are incorrect
60 | |             let mut res = 0;
61 | |             for i in 0..sz.len()
...  |
68 | |             res
69 | |         })
   | |_________^ expected `nat`, found integer
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_Zeroes_impl.rs:24:9
   |
24 | exec fn nat_to_binary(n: nat) -> (res: Vec<char>)
   |         ^^^^^^^^^^^^^ ------

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_Zeroes_impl.rs:125:23
    |
125 |         nat_to_binary(result)
    |         ------------- ^^^^^^ expected `nat`, found integer
    |         |
    |         arguments to this function are incorrect
    |
note: function defined here
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_Zeroes_impl.rs:24:9
    |
24  | exec fn nat_to_binary(n: nat) -> (res: Vec<char>)
    |         ^^^^^^^^^^^^^ ------

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_Zeroes_impl.rs:27:13
   |
27 |     if n == 0 {
   |        -    ^ expected `nat`, found integer
   |        |
   |        expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_Zeroes_impl.rs:32:21
   |
32 |         while num > 0
   |               ---   ^ expected `nat`, found integer
   |               |
   |               expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_Zeroes_impl.rs:36:22
   |
36 |             if num % 2 == 0 {
   |                ---   ^ expected `nat`, found integer
   |                |
   |                expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_Zeroes_impl.rs:36:27
   |
36 |             if num % 2 == 0 {
   |                -------    ^ expected `nat`, found integer
   |                |
   |                expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_Zeroes_impl.rs:41:25
   |
41 |             num = num / 2;
   |                   ---   ^ expected `nat`, found integer
   |                   |
   |                   expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_Zeroes_impl.rs:59:23
   |
59 |           nat_to_binary(1 % {
   |  _________-------------_^
   | |         |
   | |         arguments to this function are incorrect
60 | |             let mut res = 0;
61 | |             for i in 0..sz.len()
...  |
68 | |             res
69 | |         })
   | |_________^ expected `nat`, found integer
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_Zeroes_impl.rs:24:9
   |
24 | exec fn nat_to_binary(n: nat) -> (res: Vec<char>)
   |         ^^^^^^^^^^^^^ ------

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_Zeroes_impl.rs:125:23
    |
125 |         nat_to_binary(result)
    |         ------------- ^^^^^^ expected `nat`, found integer
    |         |
    |         arguments to this function are incorrect
    |
note: function defined here
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_Zeroes_impl.rs:24:9
    |
24  | exec fn nat_to_binary(n: nat) -> (res: Vec<char>)
    |         ^^^^^^^^^^^^^ ------

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0308`.
